<resources>
    <string name="app_name">PracticalTest01Var08</string>
    <string name="action_settings">Settings</string>
    <string name="navigate_to_secondary_activity"> navigate to secondary activity</string>
    <string name="topLeft">topLeft</string>
    <string name="topRight">topRight</string>
    <string name="center">center</string>
    <string name="bottomLeft">bottomLeft</string>
    <string name="bottomRight">bottomRight</string>
    <string name="title_activity_practical_test01_var08_secondary">
        PracticalTest01Var08SecondaryActivity
    </string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>


</resources>
