<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var08.PracticalTest01Var08MainActivity"
    tools:showIn="@layout/activity_practical_test01_var08_main">

    <Button
        android:id="@+id/navigate_to_secondary_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/navigate_to_secondary_activity"
        android:layout_gravity="right"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_gravity="center">

        <Button
            android:id="@+id/topLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/topLeft"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left"
            />


        <Button
            android:id="@+id/topRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/topRight"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right"/>
    </GridLayout>

    <Button
        android:id="@+id/centerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/center"
        android:layout_gravity="center"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_gravity="center">

        <Button
            android:id="@+id/bottomLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/bottomLeft"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left"
            />


        <Button
            android:id="@+id/bottomRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/bottomRight"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right"/>

    </GridLayout>



</LinearLayout>
